// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout goldens > careerBacon {"searchId":105} @beside 1`] = `
{
  "attrs": "79d65af75898db55",
  "colour": "dc7a69237f57352e",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @phone 1`] = `
{
  "attrs": "8990ab2fdc32086a",
  "colour": "dc7a69237f57352e",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @stacked 1`] = `
{
  "attrs": "434a24679b754692",
  "colour": "dc7a69237f57352e",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "176b0d368c71b7b9",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @beside 1`] = `
{
  "attrs": "5d5041ca83d2172e",
  "colour": "08b6aa8d320f49e1",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @phone 1`] = `
{
  "attrs": "a8b0dbbfd6dc82e8",
  "colour": "08b6aa8d320f49e1",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @stacked 1`] = `
{
  "attrs": "848f31ebd8ca4f72",
  "colour": "08b6aa8d320f49e1",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "176b0d368c71b7b9",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @beside 1`] = `
{
  "attrs": "8b1ff2f3735b1cd9",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @phone 1`] = `
{
  "attrs": "d493e32fb25d6aa6",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @stacked 1`] = `
{
  "attrs": "0467c0a0d6f37c22",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "ab001e68a072d00c",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @beside 1`] = `
{
  "attrs": "2f5d1bfaef6f012c",
  "colour": "5f5ece06abfb86fd",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @phone 1`] = `
{
  "attrs": "25729eb51b568e24",
  "colour": "5f5ece06abfb86fd",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @stacked 1`] = `
{
  "attrs": "e9316892dd3a9f75",
  "colour": "5f5ece06abfb86fd",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "ab001e68a072d00c",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @beside 1`] = `
{
  "attrs": "8b1ff2f3735b1cd9",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @phone 1`] = `
{
  "attrs": "d493e32fb25d6aa6",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @stacked 1`] = `
{
  "attrs": "0467c0a0d6f37c22",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "f9fe542be4910c6f",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @beside 1`] = `
{
  "attrs": "2f5d1bfaef6f012c",
  "colour": "5f5ece06abfb86fd",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @phone 1`] = `
{
  "attrs": "25729eb51b568e24",
  "colour": "5f5ece06abfb86fd",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @stacked 1`] = `
{
  "attrs": "e9316892dd3a9f75",
  "colour": "5f5ece06abfb86fd",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "f9fe542be4910c6f",
}
`;

exports[`layout goldens > degScatter {"searchId":105} @beside 1`] = `
{
  "attrs": "cc08c8f86cd24032",
  "colour": "3bb0c763645d6d56",
  "decor": "107fa10bef7b5590",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @phone 1`] = `
{
  "attrs": "6e093f5938f3edf9",
  "colour": "3bb0c763645d6d56",
  "decor": "e13a191c126757d1",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @stacked 1`] = `
{
  "attrs": "993a235f77c00d26",
  "colour": "3bb0c763645d6d56",
  "decor": "e7290ca4fd106dd3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @beside 1`] = `
{
  "attrs": "a2834c1bd00a2dde",
  "colour": "9920df70f2a8f9e6",
  "decor": "107fa10bef7b5590",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @phone 1`] = `
{
  "attrs": "8d9e9007b39b01ab",
  "colour": "9920df70f2a8f9e6",
  "decor": "e13a191c126757d1",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @stacked 1`] = `
{
  "attrs": "a169135b5d8be4c1",
  "colour": "9920df70f2a8f9e6",
  "decor": "e7290ca4fd106dd3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @beside 1`] = `
{
  "attrs": "1735b594ae83a0b7",
  "colour": "36fc4407f8f127fd",
  "decor": "67418b50cdb92eda",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @phone 1`] = `
{
  "attrs": "4d42dcdec6568e17",
  "colour": "36fc4407f8f127fd",
  "decor": "e79276245b20a2a2",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @stacked 1`] = `
{
  "attrs": "d73c20e933a27d17",
  "colour": "36fc4407f8f127fd",
  "decor": "21979002f110156c",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @beside 1`] = `
{
  "attrs": "c3ab2b53188edd15",
  "colour": "633cb194c0a48b00",
  "decor": "1c0b331edd957b95",
  "delays": "f8bc069d2e84086c",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @phone 1`] = `
{
  "attrs": "a6a91ade664e261e",
  "colour": "0537929f43bb036a",
  "decor": "7a9da37d660bc5fb",
  "delays": "743e57736a443af0",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @stacked 1`] = `
{
  "attrs": "4cd4c1ec5023df4c",
  "colour": "f5b3aa23c5c32117",
  "decor": "9670d39598052910",
  "delays": "cd51a73494f8ee30",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @beside 1`] = `
{
  "attrs": "f794be256c4e3d6f",
  "colour": "633cb194c0a48b00",
  "decor": "1c0b331edd957b95",
  "delays": "f8bc069d2e84086c",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @phone 1`] = `
{
  "attrs": "a288f53fe0bf50c7",
  "colour": "0537929f43bb036a",
  "decor": "7a9da37d660bc5fb",
  "delays": "743e57736a443af0",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @stacked 1`] = `
{
  "attrs": "45394e619316c2f9",
  "colour": "f5b3aa23c5c32117",
  "decor": "9670d39598052910",
  "delays": "cd51a73494f8ee30",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @beside 1`] = `
{
  "attrs": "23fc9cf9f6834ee1",
  "colour": "862345be28f1acd5",
  "decor": "67418b50cdb92eda",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @phone 1`] = `
{
  "attrs": "21297e898bd438ec",
  "colour": "450941ab62e9a4d7",
  "decor": "e79276245b20a2a2",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @stacked 1`] = `
{
  "attrs": "5ee64f0dde4f9dec",
  "colour": "862345be28f1acd5",
  "decor": "21979002f110156c",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @beside 1`] = `
{
  "attrs": "d0989fbd17942022",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @phone 1`] = `
{
  "attrs": "58f7e2c3962f93e2",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @stacked 1`] = `
{
  "attrs": "8525606fa6f6c2ec",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @beside 1`] = `
{
  "attrs": "f0f67ecc6e375732",
  "colour": "53060390b1794711",
  "decor": "d05ae7ffdc3cae20",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "d90902e843615224",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @phone 1`] = `
{
  "attrs": "c5043da7745d300a",
  "colour": "53060390b1794711",
  "decor": "ace78b214483d2e1",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "9b445d8fe098a2c3",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @stacked 1`] = `
{
  "attrs": "c9217cf52d1ce396",
  "colour": "53060390b1794711",
  "decor": "0796d37cb912cc4e",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "d5921ac4bb6b2195",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @beside 1`] = `
{
  "attrs": "48d8e0391475ac11",
  "colour": "7a5f28e5224f75ed",
  "decor": "b2d4b14b84f928d7",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @phone 1`] = `
{
  "attrs": "15373dd1ae7a3a34",
  "colour": "7a5f28e5224f75ed",
  "decor": "de5b76dbda656f3b",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @stacked 1`] = `
{
  "attrs": "37408d7c97c25694",
  "colour": "7a5f28e5224f75ed",
  "decor": "16236ae855f2a329",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > outro {"playhead":2006} @beside 1`] = `
{
  "attrs": "cbd04b0e7a6ed49d",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "9268ba7f7238b9da",
}
`;

exports[`layout goldens > outro {"playhead":2006} @phone 1`] = `
{
  "attrs": "ffde9b4bf36fd50c",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "0a7850d088660f22",
}
`;

exports[`layout goldens > outro {"playhead":2006} @stacked 1`] = `
{
  "attrs": "36c65f456c80fe49",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "01d6ff681178e66a",
}
`;

exports[`layout goldens > outro null @beside 1`] = `
{
  "attrs": "6ef1a626a78f130d",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "6ed572e151c948ce",
}
`;

exports[`layout goldens > outro null @phone 1`] = `
{
  "attrs": "947d7b2bef9eb634",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "a1caf5c301ba4362",
}
`;

exports[`layout goldens > outro null @stacked 1`] = `
{
  "attrs": "27812cb4f10ac1d4",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "8c48d9afa0d097d9",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @beside 1`] = `
{
  "attrs": "876894821fac708f",
  "colour": "9920df70f2a8f9e6",
  "decor": "ffaf11c0dca1d382",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "9268ba7f7238b9da",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @phone 1`] = `
{
  "attrs": "c871f58e5aeaf1f3",
  "colour": "9920df70f2a8f9e6",
  "decor": "a7289e2234a8350d",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "0a7850d088660f22",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @stacked 1`] = `
{
  "attrs": "68d97cb13dce572d",
  "colour": "9920df70f2a8f9e6",
  "decor": "13d22f2f894b1f25",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "01d6ff681178e66a",
}
`;

exports[`layout goldens > raceClose null @beside 1`] = `
{
  "attrs": "f6325ffc8d902310",
  "colour": "4aa4726ef2e31817",
  "decor": "720f70e8f2c75aeb",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "2e3c9b74bcc4dec7",
}
`;

exports[`layout goldens > raceClose null @phone 1`] = `
{
  "attrs": "c6ca510227ac0eaf",
  "colour": "4aa4726ef2e31817",
  "decor": "1f91bb92f70062c6",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "256f79de1cb27c58",
}
`;

exports[`layout goldens > raceClose null @stacked 1`] = `
{
  "attrs": "9247c3bca04ded04",
  "colour": "4aa4726ef2e31817",
  "decor": "20526cee0e1cdeab",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "7e07c475244e097a",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @beside 1`] = `
{
  "attrs": "a650530568138685",
  "colour": "3bb0c763645d6d56",
  "decor": "0ffe60aa09de4c04",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "223bbc0b451f00da",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @phone 1`] = `
{
  "attrs": "f30ee0785bfba59b",
  "colour": "3bb0c763645d6d56",
  "decor": "d2a8dcd08131105e",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "e6f6774f72ecb6e6",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @stacked 1`] = `
{
  "attrs": "3e1829b270fcafd2",
  "colour": "3bb0c763645d6d56",
  "decor": "dfcb44d86fb4d445",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "fa22a37d5c6bb169",
}
`;

exports[`layout goldens > raceFull null @beside 1`] = `
{
  "attrs": "a650530568138685",
  "colour": "3bb0c763645d6d56",
  "decor": "0ffe60aa09de4c04",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "223bbc0b451f00da",
}
`;

exports[`layout goldens > raceFull null @phone 1`] = `
{
  "attrs": "f30ee0785bfba59b",
  "colour": "3bb0c763645d6d56",
  "decor": "d2a8dcd08131105e",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "e6f6774f72ecb6e6",
}
`;

exports[`layout goldens > raceFull null @stacked 1`] = `
{
  "attrs": "3e1829b270fcafd2",
  "colour": "3bb0c763645d6d56",
  "decor": "dfcb44d86fb4d445",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "fa22a37d5c6bb169",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @beside 1`] = `
{
  "attrs": "70373deb11aba5de",
  "colour": "3bb0c763645d6d56",
  "decor": "0ffe60aa09de4c04",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "223bbc0b451f00da",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @phone 1`] = `
{
  "attrs": "ae0bcc2ca30a632d",
  "colour": "3bb0c763645d6d56",
  "decor": "d2a8dcd08131105e",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "e6f6774f72ecb6e6",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @stacked 1`] = `
{
  "attrs": "dec466f9fbc11316",
  "colour": "3bb0c763645d6d56",
  "decor": "dfcb44d86fb4d445",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "fa22a37d5c6bb169",
}
`;

exports[`layout goldens > raceFuture null @beside 1`] = `
{
  "attrs": "51eb37b3d6d60d6e",
  "colour": "3bb0c763645d6d56",
  "decor": "88587e47aeea6132",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5a2f8873b5c3eec4",
}
`;

exports[`layout goldens > raceFuture null @phone 1`] = `
{
  "attrs": "b8ffbe4473b79e10",
  "colour": "3bb0c763645d6d56",
  "decor": "02fa1e7e77dcf239",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "473cc6f5632dea63",
}
`;

exports[`layout goldens > raceFuture null @stacked 1`] = `
{
  "attrs": "d63e6a1aa43bb5ac",
  "colour": "3bb0c763645d6d56",
  "decor": "856bb2fa20e23765",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "59fc4bffbaaf7f93",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @beside 1`] = `
{
  "attrs": "b145fabd2236a87d",
  "colour": "9920df70f2a8f9e6",
  "decor": "27f79c584cc7c4f3",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "12ed4abdb532cb77",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @phone 1`] = `
{
  "attrs": "f53c8faec9b74bff",
  "colour": "9920df70f2a8f9e6",
  "decor": "2a91a63c83b33f5c",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "fec7170b6f04469a",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @stacked 1`] = `
{
  "attrs": "b713eedf42664e93",
  "colour": "9920df70f2a8f9e6",
  "decor": "577f39e13028a647",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "0d43a602f4cb29af",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @beside 1`] = `
{
  "attrs": "97aac7bd40e96c66",
  "colour": "ae4781dba578cab6",
  "decor": "27f79c584cc7c4f3",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "ee8d54d632ca7180",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @phone 1`] = `
{
  "attrs": "1f0e6474402b6c3b",
  "colour": "ae4781dba578cab6",
  "decor": "2a91a63c83b33f5c",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "984727637b98a91f",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @stacked 1`] = `
{
  "attrs": "2b6d7a4cb2f47c5e",
  "colour": "ae4781dba578cab6",
  "decor": "577f39e13028a647",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "6578548b8d106c64",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @beside 1`] = `
{
  "attrs": "3d18a97702a9a9c7",
  "colour": "9920df70f2a8f9e6",
  "decor": "797f9b06749cf3d7",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "9d462ee1f446918d",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @phone 1`] = `
{
  "attrs": "fa9561e688043551",
  "colour": "9920df70f2a8f9e6",
  "decor": "a904c9b221aed150",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "8f8cc030a03516bc",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @stacked 1`] = `
{
  "attrs": "3c81544d3d53567a",
  "colour": "9920df70f2a8f9e6",
  "decor": "12f5325d26747418",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "bef0b919055b92b8",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @beside 1`] = `
{
  "attrs": "a650530568138685",
  "colour": "3bb0c763645d6d56",
  "decor": "0ffe60aa09de4c04",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "223bbc0b451f00da",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @phone 1`] = `
{
  "attrs": "f30ee0785bfba59b",
  "colour": "3bb0c763645d6d56",
  "decor": "d2a8dcd08131105e",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "e6f6774f72ecb6e6",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @stacked 1`] = `
{
  "attrs": "3e1829b270fcafd2",
  "colour": "3bb0c763645d6d56",
  "decor": "dfcb44d86fb4d445",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "fa22a37d5c6bb169",
}
`;

exports[`layout goldens > raceRecent null @beside 1`] = `
{
  "attrs": "8f46a3538f512d04",
  "colour": "3bb0c763645d6d56",
  "decor": "56f3e623c91a0382",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "07ce7e936d334ccd",
}
`;

exports[`layout goldens > raceRecent null @phone 1`] = `
{
  "attrs": "89e2ca68f00764e6",
  "colour": "3bb0c763645d6d56",
  "decor": "a67e6b025deafff2",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "6448e4ab26f3545b",
}
`;

exports[`layout goldens > raceRecent null @stacked 1`] = `
{
  "attrs": "53a44691d81df54e",
  "colour": "3bb0c763645d6d56",
  "decor": "05707aad5d99e21e",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "c808bdff91cbca53",
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @beside 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @phone 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @stacked 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @beside 1`] = `
{
  "attrs": "42dcc371acfb1639",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @phone 1`] = `
{
  "attrs": "0c95462556d597f2",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @stacked 1`] = `
{
  "attrs": "42dcc371acfb1639",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @beside 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @phone 1`] = `
{
  "attrs": "47fe4f33b56db19c",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @stacked 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @beside 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @phone 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @stacked 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @beside 1`] = `
{
  "attrs": "42dcc371acfb1639",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @phone 1`] = `
{
  "attrs": "0c95462556d597f2",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @stacked 1`] = `
{
  "attrs": "42dcc371acfb1639",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @beside 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @phone 1`] = `
{
  "attrs": "47fe4f33b56db19c",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @stacked 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @beside 1`] = `
{
  "attrs": "1dd8398c568351b9",
  "colour": "3bb0c763645d6d56",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @phone 1`] = `
{
  "attrs": "d6bb71aed6188f8c",
  "colour": "3bb0c763645d6d56",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "8d5a8b9cec10e65e",
  "colour": "3bb0c763645d6d56",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @beside 1`] = `
{
  "attrs": "d77409ecf04b44da",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @phone 1`] = `
{
  "attrs": "42389b5e956975e7",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "3ae567f07956890d",
  "colour": "9920df70f2a8f9e6",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @beside 1`] = `
{
  "attrs": "3076b529593077ad",
  "colour": "3bb0c763645d6d56",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @phone 1`] = `
{
  "attrs": "72303224fd52292c",
  "colour": "3bb0c763645d6d56",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "3f13d931bbd87547",
  "colour": "3bb0c763645d6d56",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @beside 1`] = `
{
  "attrs": "2b298554590dfb16",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @phone 1`] = `
{
  "attrs": "3d9a094d3d422cb3",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "91b1618254792028",
  "colour": "9920df70f2a8f9e6",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @beside 1`] = `
{
  "attrs": "3076b529593077ad",
  "colour": "3bb0c763645d6d56",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @phone 1`] = `
{
  "attrs": "72303224fd52292c",
  "colour": "3bb0c763645d6d56",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "3f13d931bbd87547",
  "colour": "3bb0c763645d6d56",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @beside 1`] = `
{
  "attrs": "2b298554590dfb16",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @phone 1`] = `
{
  "attrs": "3d9a094d3d422cb3",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "91b1618254792028",
  "colour": "9920df70f2a8f9e6",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @beside 1`] = `
{
  "attrs": "98bc756cf78f1880",
  "colour": "11a6901d4a4c2317",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @phone 1`] = `
{
  "attrs": "f250b6c10c9a30f7",
  "colour": "11a6901d4a4c2317",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "cf6832371b4fb16d",
  "colour": "11a6901d4a4c2317",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @beside 1`] = `
{
  "attrs": "cc40f47779bf09f0",
  "colour": "3bb0c763645d6d56",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @phone 1`] = `
{
  "attrs": "c66177e77fbcb43e",
  "colour": "3bb0c763645d6d56",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @stacked 1`] = `
{
  "attrs": "04909a9baf514945",
  "colour": "3bb0c763645d6d56",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @beside 1`] = `
{
  "attrs": "751e710895ab733d",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @phone 1`] = `
{
  "attrs": "8c9e24a732d274cd",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @stacked 1`] = `
{
  "attrs": "766a15e768698a24",
  "colour": "9920df70f2a8f9e6",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @beside 1`] = `
{
  "attrs": "2624db9de994211f",
  "colour": "0835cca37022255f",
  "decor": "5ab4fef53354717f",
  "delays": null,
  "trailDelays": null,
  "trails": "86b46b362892c32c",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @phone 1`] = `
{
  "attrs": "6fdb038f46938129",
  "colour": "0835cca37022255f",
  "decor": "502ae91f4d44c83b",
  "delays": null,
  "trailDelays": null,
  "trails": "863c09ed0cd82558",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @stacked 1`] = `
{
  "attrs": "72fa8eb236e9377b",
  "colour": "0835cca37022255f",
  "decor": "383d9e0ee3baf6dc",
  "delays": null,
  "trailDelays": null,
  "trails": "9ef3970861194c4c",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @beside 1`] = `
{
  "attrs": "7a1dd09359d560ec",
  "colour": "0835cca37022255f",
  "decor": "5ab4fef53354717f",
  "delays": null,
  "trailDelays": null,
  "trails": "af06ea4ed5fb4418",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @phone 1`] = `
{
  "attrs": "cbad9e14e7875e24",
  "colour": "0835cca37022255f",
  "decor": "502ae91f4d44c83b",
  "delays": null,
  "trailDelays": null,
  "trails": "58f1c21582e9e72d",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @stacked 1`] = `
{
  "attrs": "a61b5faeec70e156",
  "colour": "0835cca37022255f",
  "decor": "383d9e0ee3baf6dc",
  "delays": null,
  "trailDelays": null,
  "trails": "9f61aa7cddb1e6fb",
}
`;

exports[`layout goldens > titleGalaxy null @beside 1`] = `
{
  "attrs": "d0989fbd17942022",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @phone 1`] = `
{
  "attrs": "58f7e2c3962f93e2",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @stacked 1`] = `
{
  "attrs": "8525606fa6f6c2ec",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;
